--- a/www/index.html
+++ b/www/index.html
@@ -75,5 +75,6 @@ function onDeviceReady(){
 <body>
 	<input type="hidden" id="gcm_id"></input>
 	<input type="hidden" id="notification_url"></input>
+	<img src="img/truck_splash.png" style="max-width: 100%; max-height: 100%;">
 </body>
 </html>
